Texture node groups tend to crash Blender a lot. #36694

Closed
opened 2013-09-10 04:40:25 +02:00 by J B · 9 comments

%%%--- Operating System, Graphics card ---
Arch GNU/Linux, 64bit, NV 9600M, 325.15

- Short description of error ---

Modifying existing texture node groups has the tendency to crash a lot, especially when dealing with complex, nested node groups and when manipulating node connections adjacent to the group's input/output nodes.

This happens both on 2.68.0 from my distribution's repositories and on 2.68.4-r59974 which I compiled myself.

Stack trace:

  • 0 0x0000000002556688 in copy_v4_v4 (r=0x7fffcc00a778, a=0x0) at /tmp/blender/source/blender/blenlib/intern/math_vector_inline.c:73
  • 1 0x00000000025566f2 in copy_stack (to=0x7fffcc00a778, from=0x0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:50
  • 2 0x000000000255683f in group_copy_inputs (gnode=0x7fffd8148188, in=0x7fffd37e81d0, gstack=0x7fffcc00a778) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:99
  • 3 0x00000000025569ef in group_execute (data=0x7fffd37e8440, thread=0, node=0x7fffd8148188, execdata=0x7fffd8001c98, in=0x7fffd37e81d0, out=0x7fffd37e7fd0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:146
  • 4 0x000000000255e00a in ntreeExecThreadNodes (exec=0x7fffd815d988, nts=0x7fffcc00a348, callerdata=0x7fffd37e8440, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309
  • 5 0x000000000255c995 in ntreeTexExecTree (nodes=0x7fffd8000938, texres=0x7fffd37e8660, co=0x7fffd37e8650, dxt=0x7fffd37e8640, dyt=0x7fffd37e8630, osatex=0, thread=0, UNUSED_tex=0x7fffd8145c18, which_output=0, cfra=1, preview=0, shi=0x7fffd37f7308, mtex=0x6caa5d8) at /tmp/blender/source/blender/nodes/texture/node_texture_tree.c:341
  • 6 0x0000000001f0e7d7 in multitex_mtex (shi=0x7fffd37f7308, mtex=0x6caa5d8, texvec=0x7fffd37e8650, dxt=0x7fffd37e8640, dyt=0x7fffd37e8630, texres=0x7fffd37e8660, pool=0x7fffd81485b8) at /tmp/blender/source/blender/render/intern/source/render_texture.c:1304
  • 7 0x0000000001f134e7 in do_material_tex (shi=0x7fffd37f7308, re=0x51f8e60 ) at /tmp/blender/source/blender/render/intern/source/render_texture.c:2320
  • 8 0x0000000001f34db5 in shade_lamp_loop (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeoutput.c:1744
  • 9 0x0000000001f26f72 in shade_material_loop (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:104
  • 10 0x0000000001f27395 in shade_input_do_shade (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:176
  • 11 0x0000000001f576eb in shade_tra_samples (ssamp=0x7fffd37f7280, cache=0x0, x=0, y=0, row=0x7fffd37e8b4c, addpassflag=0) at /tmp/blender/source/blender/render/intern/source/zbuf.c:3875
  • 12 0x0000000001f58cd0 in zbuffer_transp_shade (pa=0x7fffd8099ee8, rl=0x7fffcc00ffe8, pass=0x7fffcc005aa8, UNUSED_psmlist=0x7fffd37fdcd0) at /tmp/blender/source/blender/render/intern/source/zbuf.c:4229
  • 13 0x0000000001f016c9 in zbufshadeDA_tile (pa=0x7fffd8099ee8) at /tmp/blender/source/blender/render/intern/source/rendercore.c:1245
  • 14 0x0000000001ee9f4b in do_part_thread (pa_v=0x7fffd8099ee8) at /tmp/blender/source/blender/render/intern/source/pipeline.c:781
  • 15 0x0000000001eea848 in do_render_thread (thread_v=0x7fffd3ffe520) at /tmp/blender/source/blender/render/intern/source/pipeline.c:953
  • 16 0x000000000263f9e9 in tslot_thread_start (tslot_p=0x7fffd8145958) at /tmp/blender/source/blender/blenlib/intern/threads.c:229
  • 17 0x00007ffff5b850a2 in start_thread () from /usr/lib/libpthread.so.0

Please note that on a different .blend file I was getting a crash in an entirely different place so there is probably something wrong with group nodes' bookkeeping rather this particular codepath. (In other words - this crash may be just a symptom, not the cause.)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Open the attached blend file.
  2. Try rapidly clicking on the socket dot in the Group Output node; if that fails try disconnecting are reconnecting two nodes and then try again.

This can also be easily reproduced from scratch - create a few nested texture groups and try editing them.%%%

%%%--- Operating System, Graphics card --- Arch GNU/Linux, 64bit, NV 9600M, 325.15 - Short description of error --- Modifying existing texture node groups has the tendency to crash *a lot*, especially when dealing with complex, nested node groups and when manipulating node connections adjacent to the group's input/output nodes. This happens both on 2.68.0 from my distribution's repositories and on 2.68.4-r59974 which I compiled myself. Stack trace: - 0 0x0000000002556688 in copy_v4_v4 (r=0x7fffcc00a778, a=0x0) at /tmp/blender/source/blender/blenlib/intern/math_vector_inline.c:73 - 1 0x00000000025566f2 in copy_stack (to=0x7fffcc00a778, from=0x0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:50 - 2 0x000000000255683f in group_copy_inputs (gnode=0x7fffd8148188, in=0x7fffd37e81d0, gstack=0x7fffcc00a778) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:99 - 3 0x00000000025569ef in group_execute (data=0x7fffd37e8440, thread=0, node=0x7fffd8148188, execdata=0x7fffd8001c98, in=0x7fffd37e81d0, out=0x7fffd37e7fd0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:146 - 4 0x000000000255e00a in ntreeExecThreadNodes (exec=0x7fffd815d988, nts=0x7fffcc00a348, callerdata=0x7fffd37e8440, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309 - 5 0x000000000255c995 in ntreeTexExecTree (nodes=0x7fffd8000938, texres=0x7fffd37e8660, co=0x7fffd37e8650, dxt=0x7fffd37e8640, dyt=0x7fffd37e8630, osatex=0, thread=0, UNUSED_tex=0x7fffd8145c18, which_output=0, cfra=1, preview=0, shi=0x7fffd37f7308, mtex=0x6caa5d8) at /tmp/blender/source/blender/nodes/texture/node_texture_tree.c:341 - 6 0x0000000001f0e7d7 in multitex_mtex (shi=0x7fffd37f7308, mtex=0x6caa5d8, texvec=0x7fffd37e8650, dxt=0x7fffd37e8640, dyt=0x7fffd37e8630, texres=0x7fffd37e8660, pool=0x7fffd81485b8) at /tmp/blender/source/blender/render/intern/source/render_texture.c:1304 - 7 0x0000000001f134e7 in do_material_tex (shi=0x7fffd37f7308, re=0x51f8e60 <R>) at /tmp/blender/source/blender/render/intern/source/render_texture.c:2320 - 8 0x0000000001f34db5 in shade_lamp_loop (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeoutput.c:1744 - 9 0x0000000001f26f72 in shade_material_loop (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:104 - 10 0x0000000001f27395 in shade_input_do_shade (shi=0x7fffd37f7308, shr=0x7fffd37fcf08) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:176 - 11 0x0000000001f576eb in shade_tra_samples (ssamp=0x7fffd37f7280, cache=0x0, x=0, y=0, row=0x7fffd37e8b4c, addpassflag=0) at /tmp/blender/source/blender/render/intern/source/zbuf.c:3875 - 12 0x0000000001f58cd0 in zbuffer_transp_shade (pa=0x7fffd8099ee8, rl=0x7fffcc00ffe8, pass=0x7fffcc005aa8, UNUSED_psmlist=0x7fffd37fdcd0) at /tmp/blender/source/blender/render/intern/source/zbuf.c:4229 - 13 0x0000000001f016c9 in zbufshadeDA_tile (pa=0x7fffd8099ee8) at /tmp/blender/source/blender/render/intern/source/rendercore.c:1245 - 14 0x0000000001ee9f4b in do_part_thread (pa_v=0x7fffd8099ee8) at /tmp/blender/source/blender/render/intern/source/pipeline.c:781 - 15 0x0000000001eea848 in do_render_thread (thread_v=0x7fffd3ffe520) at /tmp/blender/source/blender/render/intern/source/pipeline.c:953 - 16 0x000000000263f9e9 in tslot_thread_start (tslot_p=0x7fffd8145958) at /tmp/blender/source/blender/blenlib/intern/threads.c:229 - 17 0x00007ffff5b850a2 in start_thread () from /usr/lib/libpthread.so.0 Please note that on a different .blend file I was getting a crash in an entirely different place so there is *probably* something wrong with group nodes' bookkeeping rather this particular codepath. (In other words - this crash may be just a symptom, not the cause.) - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Open the attached blend file. 2. Try rapidly clicking on the socket dot in the Group Output node; if that fails try disconnecting are reconnecting two nodes and then try again. This can also be easily reproduced from scratch - create a few nested texture groups and try editing them.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed/worked around r59983.%%%

%%%fixed/worked around r59983.%%%
Author

%%%r59995, unfortunately it is not fixed.

Here is another .blend file that crashes: http://www.pasteall.org/blend/23983

Just add a new Math node, click on the empty socket in the Group Input and drag it to one of the sockets in the newly created Math node as if you'd want to connect them.%%%

%%%r59995, unfortunately it is not fixed. Here is another .blend file that crashes: http://www.pasteall.org/blend/23983 Just add a new Math node, click on the empty socket in the Group Input and drag it to one of the sockets in the newly created Math node as if you'd want to connect them.%%%

%%%fixed new file r60058.%%%

%%%fixed new file r60058.%%%
Author

%%%r60067, still crashes when I try to drag connect a new input socket to a new math node's socket.

  • 0 0x000000000255fc41 in tex_output (node=0x7438d58, execdata=0x7fffcc038968, in=0x7fffd2ff4ca0, out=0x7fffcc03dd58, texfn=0x255aee0 , cdata=0x7fffd2ff5d20) at /tmp/blender/source/blender/nodes/texture/node_texture_util.c:149
  • 1 0x000000000255b432 in exec (data=0x7fffd2ff5d20, UNUSED_thread=0, node=0x7438d58, execdata=0x7fffcc038968, in=0x7fffd2ff4ca0, out=0x7fffd2ff4aa0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_math.c:195
  • 2 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc037528, nts=0x7fffcc03d8f8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309
  • 3 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x744ce78, execdata=0x7fffcc036fe8, in=0x7fffd2ff5150, out=0x7fffd2ff4f50) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152
  • 4 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc036f18, nts=0x7fffcc03bf78, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309
  • 5 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x74319a8, execdata=0x7fffcc0365f0, in=0x7fffd2ff5600, out=0x7fffd2ff5400) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152
  • 6 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc036508, nts=0x7fffcc03abf8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309
  • 7 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x74252f8, execdata=0x7fffcc035f50, in=0x7fffd2ff5ab0, out=0x7fffd2ff58b0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152
  • 8 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc035ec8, nts=0x7fffcc036ea8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309
  • 9 0x000000000255f6f9 in ntreeTexExecTree (nodes=0x7424a88, texres=0x7fffd2ff5f40, co=0x7fffd2ff5f30, dxt=0x7fffd2ff5f20, dyt=0x7fffd2ff5f10, osatex=512, thread=0, UNUSED_tex=0x7424898, which_output=0, cfra=2, preview=0, shi=0x7fffd2ff63c8, mtex=0x7fffd800b6a8) at /tmp/blender/source/blender/nodes/texture/node_texture_tree.c:341
  • 10 0x0000000001f103a7 in multitex_mtex (shi=0x7fffd2ff63c8, mtex=0x7fffd800b6a8, texvec=0x7fffd2ff5f30, dxt=0x7fffd2ff5f20, dyt=0x7fffd2ff5f10, texres=0x7fffd2ff5f40, pool=0x7fffd8008698) at /tmp/blender/source/blender/render/intern/source/render_texture.c:1304
  • 11 0x0000000001f150b7 in do_material_tex (shi=0x7fffd2ff63c8, re=0x52007a0 ) at /tmp/blender/source/blender/render/intern/source/render_texture.c:2320
  • 12 0x0000000001f36985 in shade_lamp_loop (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeoutput.c:1744
  • 13 0x0000000001f28b42 in shade_material_loop (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:104
  • 14 0x0000000001f28f65 in shade_input_do_shade (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:176
  • 15 0x0000000001f2ea98 in shade_samples (ssamp=0x7fffd2ff6340, ps=0x7fffc400f608, x=12, y=0) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:1461
  • 16 0x0000000001f01e1b in shadeDA_tile (pa=0x7fffd800ae08, rl=0x7fffc40009d8) at /tmp/blender/source/blender/render/intern/source/rendercore.c:865
  • 17 0x0000000001f03102 in zbufshadeDA_tile (pa=0x7fffd800ae08) at /tmp/blender/source/blender/render/intern/source/rendercore.c:1219
  • 18 0x0000000001eebb1b in do_part_thread (pa_v=0x7fffd800ae08) at /tmp/blender/source/blender/render/intern/source/pipeline.c:781
  • 19 0x0000000001eec418 in do_render_thread (thread_v=0x7fffd3ffe520) at /tmp/blender/source/blender/render/intern/source/pipeline.c:953
  • 20 0x00000000026439f9 in tslot_thread_start (tslot_p=0x7fffd80079d8) at /tmp/blender/source/blender/blenlib/intern/threads.c:229
  • 21 0x00007ffff5b850a2 in start_thread () from /usr/lib/libpthread.so.0%%%
%%%r60067, still crashes when I try to drag connect a new input socket to a new math node's socket. - 0 0x000000000255fc41 in tex_output (node=0x7438d58, execdata=0x7fffcc038968, in=0x7fffd2ff4ca0, out=0x7fffcc03dd58, texfn=0x255aee0 <valuefn>, cdata=0x7fffd2ff5d20) at /tmp/blender/source/blender/nodes/texture/node_texture_util.c:149 - 1 0x000000000255b432 in exec (data=0x7fffd2ff5d20, UNUSED_thread=0, node=0x7438d58, execdata=0x7fffcc038968, in=0x7fffd2ff4ca0, out=0x7fffd2ff4aa0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_math.c:195 - 2 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc037528, nts=0x7fffcc03d8f8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309 - 3 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x744ce78, execdata=0x7fffcc036fe8, in=0x7fffd2ff5150, out=0x7fffd2ff4f50) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152 - 4 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc036f18, nts=0x7fffcc03bf78, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309 - 5 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x74319a8, execdata=0x7fffcc0365f0, in=0x7fffd2ff5600, out=0x7fffd2ff5400) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152 - 6 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc036508, nts=0x7fffcc03abf8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309 - 7 0x000000000255976a in group_execute (data=0x7fffd2ff5d20, thread=0, node=0x74252f8, execdata=0x7fffcc035f50, in=0x7fffd2ff5ab0, out=0x7fffd2ff58b0) at /tmp/blender/source/blender/nodes/texture/nodes/node_texture_common.c:152 - 8 0x0000000002560da2 in ntreeExecThreadNodes (exec=0x7fffcc035ec8, nts=0x7fffcc036ea8, callerdata=0x7fffd2ff5d20, thread=0) at /tmp/blender/source/blender/nodes/intern/node_exec.c:309 - 9 0x000000000255f6f9 in ntreeTexExecTree (nodes=0x7424a88, texres=0x7fffd2ff5f40, co=0x7fffd2ff5f30, dxt=0x7fffd2ff5f20, dyt=0x7fffd2ff5f10, osatex=512, thread=0, UNUSED_tex=0x7424898, which_output=0, cfra=2, preview=0, shi=0x7fffd2ff63c8, mtex=0x7fffd800b6a8) at /tmp/blender/source/blender/nodes/texture/node_texture_tree.c:341 - 10 0x0000000001f103a7 in multitex_mtex (shi=0x7fffd2ff63c8, mtex=0x7fffd800b6a8, texvec=0x7fffd2ff5f30, dxt=0x7fffd2ff5f20, dyt=0x7fffd2ff5f10, texres=0x7fffd2ff5f40, pool=0x7fffd8008698) at /tmp/blender/source/blender/render/intern/source/render_texture.c:1304 - 11 0x0000000001f150b7 in do_material_tex (shi=0x7fffd2ff63c8, re=0x52007a0 <R>) at /tmp/blender/source/blender/render/intern/source/render_texture.c:2320 - 12 0x0000000001f36985 in shade_lamp_loop (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeoutput.c:1744 - 13 0x0000000001f28b42 in shade_material_loop (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:104 - 14 0x0000000001f28f65 in shade_input_do_shade (shi=0x7fffd2ff63c8, shr=0x7fffd2ffbfc8) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:176 - 15 0x0000000001f2ea98 in shade_samples (ssamp=0x7fffd2ff6340, ps=0x7fffc400f608, x=12, y=0) at /tmp/blender/source/blender/render/intern/source/shadeinput.c:1461 - 16 0x0000000001f01e1b in shadeDA_tile (pa=0x7fffd800ae08, rl=0x7fffc40009d8) at /tmp/blender/source/blender/render/intern/source/rendercore.c:865 - 17 0x0000000001f03102 in zbufshadeDA_tile (pa=0x7fffd800ae08) at /tmp/blender/source/blender/render/intern/source/rendercore.c:1219 - 18 0x0000000001eebb1b in do_part_thread (pa_v=0x7fffd800ae08) at /tmp/blender/source/blender/render/intern/source/pipeline.c:781 - 19 0x0000000001eec418 in do_render_thread (thread_v=0x7fffd3ffe520) at /tmp/blender/source/blender/render/intern/source/pipeline.c:953 - 20 0x00000000026439f9 in tslot_thread_start (tslot_p=0x7fffd80079d8) at /tmp/blender/source/blender/blenlib/intern/threads.c:229 - 21 0x00007ffff5b850a2 in start_thread () from /usr/lib/libpthread.so.0%%%

%%%I wasn't able to crash based on your second comment, but trying other actions managed to crash, reopening.%%%

%%%I wasn't able to crash based on your second comment, but trying other actions managed to crash, reopening.%%%
Member

%%%i am able to reproduce that issue on Windows 7 64 bit, "blender-2.68-r60230M-win64.zip" and "test3.blend"
i append a video, that shows the crash.%%%

%%%i am able to reproduce that issue on Windows 7 64 bit, "blender-2.68-r60230M-win64.zip" and "test3.blend" i append a video, that shows the crash.%%%
Member

%%%This has been fixed by r60468 too. Thanks for reporting!%%%

%%%This has been fixed by r60468 too. Thanks for reporting!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36694
No description provided.