fix/workaround [#36694] Texture node groups tend to crash Blender a lot.